cardlibrary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardlibrary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardlibrary
  template:
    metadata:
      labels:
        app: cardlibrary
    spec:
      serviceAccountName: cardlibrary-sa
      containers:
        - name: cardlibrary
          image: tharsi12/cardlibrary:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
