cardlibrary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardlibrary
spec:
  selector:
    app: cardlibrary
  ports:
    - port: 8080
      targetPort: 8080
